--- a/style.css
+++ b/style.css
@@ -129,15 +129,17 @@ body{
 @media only screen and (max-width: 600px) {
   .writing {
     width: 90%;
+    height: 25vh; 
   }
   .text{
     width: 90%;
+    height: 52vh;
   }
   .org{
     margin-left: 0px;
   }
-}
 
+}
 
 /* 
 #inventory {
