--- a/gen_style.css
+++ b/gen_style.css
@@ -48,7 +48,7 @@ body{
   outline: none;
   height: 98%;
   color: aliceblue;
-  font-size: 25px;
+  font-size: 15px;
   text-align: center;
   caret-color: rgb(125, 82, 32);
   color: rgb(158, 114, 64);
@@ -95,8 +95,7 @@ body{
   border-color: rgb(125, 82, 32);
   border-radius: 7px;
   font-size: 25px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 5px;
 }
 .options:hover{
   background-color: rgb(125, 82, 32);
