--- a/gen_style.css
+++ b/gen_style.css
@@ -48,7 +48,7 @@ body{
   outline: none;
   height: 98%;
   color: aliceblue;
-  font-size: 15px;
+  font-size: 25px;
   text-align: center;
   caret-color: rgb(125, 82, 32);
   color: rgb(158, 114, 64);
@@ -136,10 +136,10 @@ body{
   .org{
     margin-left: 0px;
   }
-  body{
-    font-size: 15px !important;
+  #textWindow{
+    font-size: 20px;
   }
-
+  
 }
 
 
