--- a/gen_style.css
+++ b/gen_style.css
@@ -83,6 +83,28 @@ body{
   word-wrap: break-word;
 }
 
+#inventory {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  gap: 10px;
+}
+.invslot{
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 2px;
+  border-color: rgb(125, 82, 32);
+  color: rgb(158, 114, 64);
+  transition: transform 0.6s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.invslot:hover{
+  background-color: rgb(125, 82, 32);
+}
+
 #buttons{
   width: 100%;
   height: 15%;
@@ -136,9 +158,11 @@ body{
   .org{
     margin-left: 0px;
   }
+  #buttons{
+    height: fit-content;
+  }
   .options{
     font-size: 18px;
-    height: fit-content;
   }
   #textWindow{
     font-size: 20px;
@@ -146,5 +170,8 @@ body{
   #chat{
     font-size: 18px;
     height: 40%;
+  }
+  #inventory {
+    display: none;
   }
 }
